# pman-sdl

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  auto-package.sh  auto-rebuild.sh  configure  configure.ac  index.html
VisualC/: Makefile.am  Makefile.in  Pman.sln  Pman.vcproj
docs/: Makefile.am  Makefile.in  instructions.txt  oo_notes.txt  postmortem.html
resources/: Makefile.am  Makefile.in
resources/bmp/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  audio.c  audio.h  debug.c  debug.h  drawing.c  drawing.h  fixed.c  fixed.h  font.c  font.h  game.c  game.h  globals.h  hiscore.c  hiscore.h  main.c  menu.c  menu.h  pman.c  pman.h  pman_agent.c  pman_agent.h  pman_agent_fruit.c  pman_agent_fruit.h  pman_agent_ghost.c  pman_agent_ghost.h  pman_agent_pman.c  pman_agent_pman.h  pman_board.c  pman_board.h  pman_score.c  pman_score.h  state.c  state.h
