bin_PROGRAMS = pman

pman_SOURCES = audio.c audio.h debug.c debug.h drawing.c drawing.h fixed.c \
 fixed.h font.c font.h game.c game.h \
 globals.h hiscore.c hiscore.h main.c \
 menu.c menu.h pman_agent.c pman_agent_fruit.c \
 pman_agent_fruit.h  pman_agent_ghost.c pman_agent_ghost.h \
 pman_agent.h pman_agent_pman.c pman_agent_pman.h pman_board.c \
 pman_board.h pman.c pman.h pman_score.c pman_score.h \
 state.c state.h

